# weather-rust

./: Cargo.toml  main.rs  sonar-proejct.properties
.github/workflows/: rust.yml
.scannerwork/: report-task.txt
application/: service.rs
domain/: models.rs
src/: main.rs
src/application/: service.rs
src/domain/: models.rs
src/infrastructure/: location_service.rs
